Impl #13 - Search, Page Place & Event
# 사용자의 장소와 이벤트 조회 리스트 검색기능과 페이징 기능 추가